--- a/pages/about.html
+++ b/pages/about.html
@@ -5,33 +5,29 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Graffiti 'N NYC</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="./about.html">About Us</a></li>
-        <li><a href="#">Search</a></li>
-        <li><a href="./index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="search.html">Search</a></li>
       </ul>
     </nav>
   </header>
 
-  <div class="title boxes">
-    <h1>Graffiti 'n NYC'</h1>
-  </div>
-
   <div class="container">
-    <h2>Meet the creaters: </h2>
+    <h2>Meet The Creators: </h2>
     <p>Shadman: Passionate about coding and devloping new software.</p>
     <p>Anthony: This is my first hackathon and I am looking forward to building my skills in real time.</p>
     <p>Jennifer: I was able to learn more about computer science in this hackathon through 
  the collaboration with my peers and the mentorship of industry proffesionals. </p>
     <p>Isa: Hi yall, I am a seinor to at Lehman College, This is my second Hackathon! I love cats and art so this project is perfect for me. I hope to people enjoy this application!!
     </p>
-    <p>Samantha: I love art, and tech! I have some skills in front-end development </p>
+    <p>Samantha: I love art, and tech! I have some skills in front-end development!</p>
 
     <h4>We hope to encourage individuals of different walks of life to visit their nearest art gallery through our search engine that filters galleries by zip code. By visiting their nearest art institution, individuals will walk away with the fundementals of art history, cultural preservation, and keeping the heart of NYC alive. 
     </h4>
