major-ui-changes

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,19 +9,43 @@
 </head>
 
 <body>
+  <div class="background"></div>
 
   <!-- The pretty stuff will be down here :D -->
   <header>
+    <div class="headerquote">
+      EXPLORE !!
+    </div>
+    <div class="header">
+      <img src="/image/hudson-yards.png" alt="hudson-yards" class="imgheader">
+    </div>
+    <div class="logo">GNYC</div> 
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="search.html">Search</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="search.html">Discover</a></li>
       </ul>
     </nav>
   </header>
 
-  
+  <div class="container">
+    
+    <div class="headerspan">
+      <span>
+        Graffiti N' NYC is a dynamic web app designed to guide art enthusiasts and 
+        curious explorers through a curated collection of galleries around the globe. 
+      </span>
+      <br><br>
+      <span>
+        With the use of <b>Google Maps API</b> and <b>OpenNYC APIs</b>, users can effortlessly pinpoint, browse, and 
+        discover nearby art spaces, exhibitions, and events, enriching their cultural journey 
+        with every click. Whether you're seeking contemporary masterpieces or hidden gems, 
+        our intuitive interface ensures a seamless and immersive gallery-hopping experience 
+        tailored to your artistic preferences.
+      </span>
+    </div>
+  </div>
 
     <!-- Replit Script and other scripts DON'T DELETE IT pls -->
     <script src=" https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
