--- a/pages/about.html
+++ b/pages/about.html
@@ -10,11 +10,13 @@
 
 <body>
   <header>
+    <div class="logo">GNYC</div>
+
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
             <li><a href="#">About Us</a></li>
-            <li><a href="search.html">Search</a></li>
+            <li><a href="search.html">Discover</a></li>
       </ul>
     </nav>
   </header>
